// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDocLink view renders does not show create link as expected 1`] = `
<div
  className="button-group"
>
  <UNDEFINED
    disabled={false}
    icon="add--glyph"
    iconDescription="Provide icon description if icon is used"
    id="create-resource"
    kind="primary"
    onClick={[MockFunction]}
    small={true}
    tabIndex={0}
    type="button"
  >
    does not show create link
  </UNDEFINED>
</div>
`;

exports[`createDocLink view renders show create link as expected 1`] = `
<div
  className="button-group"
>
  <UNDEFINED
    disabled={false}
    icon="add--glyph"
    iconDescription="Provide icon description if icon is used"
    id="create-resource"
    kind="primary"
    onClick={[MockFunction]}
    small={true}
    tabIndex={0}
    type="button"
  >
    show create link
  </UNDEFINED>
</div>
`;
